--- a/package.json
+++ b/package.json
@@ -9,17 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.3.1",
+    "@radix-ui/themes": "^3.1.6",
     "@types/node": "22.10.2",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
     "autoprefixer": "10.4.20",
+    "axios": "^1.7.9",
     "eslint": "9.17.0",
     "eslint-config-next": "15.1.3",
     "next": "15.1.3",
     "postcss": "8.4.49",
+    "prisma": "^5.3.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
     "tailwindcss": "3.4.17",
-    "typescript": "5.7.2"
+    "tailwindcss-animate": "^1.0.7",
+    "ticket-manager": "file:",
+    "typescript": "5.7.2",
+    "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "daisyui": "^4.12.23"
   }
 }
