--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^5.3.1",
     "@radix-ui/themes": "^3.1.6",
     "@types/node": "22.10.2",
@@ -29,7 +30,7 @@
     "tailwindcss-animate": "^1.0.7",
     "ticket-manager": "file:",
     "typescript": "5.7.2",
-    "zod": "^3.22.2"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "daisyui": "^4.12.23"
