--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.9",
     "eslint": "9.17.0",
     "eslint-config-next": "15.1.3",
+    "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "postcss": "8.4.49",
     "prisma": "^5.3.1",
@@ -33,6 +34,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@shadcn/ui": "^0.0.4",
     "daisyui": "^4.12.23"
   }
 }
