--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "19.0.2",
     "autoprefixer": "10.4.20",
     "axios": "^1.7.9",
+    "delay": "^6.0.0",
     "eslint": "9.17.0",
     "eslint-config-next": "15.1.3",
     "lucide-react": "^0.469.0",
@@ -27,6 +28,7 @@
     "react-dom": "19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-loading-skeleton": "^3.3.1",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "ticket-manager": "file:",
@@ -34,7 +36,6 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@shadcn/ui": "^0.0.4",
     "daisyui": "^4.12.23"
   }
 }
