--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^5.3.1",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.1.6",
     "@types/node": "22.10.2",
     "@types/react": "19.0.2",
@@ -20,7 +21,6 @@
     "delay": "^6.0.0",
     "eslint": "9.17.0",
     "eslint-config-next": "15.1.3",
-    "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "postcss": "8.4.49",
     "prisma": "^5.3.1",
@@ -36,6 +36,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "github:tailwindcss/typography",
     "daisyui": "^4.12.23"
   }
 }
