--- a/package.json
+++ b/package.json
@@ -14,19 +14,20 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.1.6",
     "@types/node": "22.10.2",
-    "@types/react": "19.0.2",
-    "@types/react-dom": "19.0.2",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.7",
     "autoprefixer": "10.4.20",
     "axios": "^1.7.9",
     "delay": "^6.0.0",
     "eslint": "9.17.0",
     "eslint-config-next": "15.1.3",
     "lucide-react": "^0.469.0",
-    "next": "15.1.3",
+    "next": "^13.4.19",
+    "next-auth": "^4.23.1",
     "postcss": "8.4.49",
     "prisma": "^5.3.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-loading-skeleton": "^3.3.1",
