--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,7 +35,10 @@
     "editor.formatOnPaste": true, // optional
     "editor.formatOnSaveMode": "file", // required to format on save
     "files.autoSave": "onFocusChange", // optional but recommended
-    "vs-code-prettier-eslint.prettierLast": false 
+    "vs-code-prettier-eslint.prettierLast": false,
+    "[prisma]": {
+        "editor.defaultFormatter": "Prisma.prisma"
+    }
 
       
 }
