Show a toast notification on issue assigned to an user

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,18 +27,29 @@
     "editor.snippetSuggestions": "inline",
 
     // Prettier or formatting settings (optional but useful for a Next.js project)
-    "editor.formatOnSave": true,
     "prettier.singleQuote": true,
     "prettier.trailingComma": "es5",
     "editor.defaultFormatter": "rvest.vs-code-prettier-eslint",
-    "editor.formatOnType": false, // required
     "editor.formatOnPaste": true, // optional
     "editor.formatOnSaveMode": "file", // required to format on save
     "files.autoSave": "onFocusChange", // optional but recommended
     "vs-code-prettier-eslint.prettierLast": false,
     "[prisma]": {
         "editor.defaultFormatter": "Prisma.prisma"
-    }
-
-      
+    },
+    "editor.quickSuggestions": {
+        "other": true,
+        "comments": false,
+        "strings": true
+    },
+    "editor.suggestOnTriggerCharacters": true,
+    "editor.tabCompletion": "on",
+    "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[typescript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "editor.formatOnSave": true,
+    "editor.formatOnType": true
 }
