--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/themes": "^1.1.2",
+    "@radix-ui/themes": "^3.1.6",
     "@tanstack/react-query": "^4.35.3",
     "@types/node": "22.10.2",
     "@types/react": "^18.2.14",
@@ -31,6 +31,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "react-loading-skeleton": "^3.3.1",
     "tailwindcss": "3.4.17",
