--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "delay": "^6.0.0",
     "eslint": "9.17.0",
     "eslint-config-next": "15.1.3",
+    "framer-motion": "^11.18.0",
     "lucide-react": "^0.469.0",
     "next": "^13.4.19",
     "next-auth": "^4.23.1",
@@ -34,6 +35,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
     "react-loading-skeleton": "^3.3.1",
+    "recharts": "^2.8.0",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "ticket-manager": "file:",
