--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.1.6",
+    "@sentry/nextjs": "^8.50.0",
     "@tanstack/react-query": "^4.35.3",
     "@types/node": "22.10.2",
     "@types/react": "^18.2.14",
